<package format="3">
  <name>footprint_changer</name>
  <version>0.1.0</version>
  <description>Rust-based footprint changer for Nav2</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  
  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>
  <depend>rclrs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
